# postak

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
bot/: __main__.py  app.py  config.py  conversation.py  generation.py  handlers.py  llm.py  rendering.py  store.py
bot/store/: __init__.py  base.py  memory.py  sqlite.py
postak/: __init__.py  __main__.py  access.py  app.py  channels.py  commands.py  config.py  conversation.py  generation.py  handlers.py  llm.py  registry.py  rendering.py  titling.py
postak/store/: __init__.py  base.py  memory.py  sqlite.py
tests/: test_access.py  test_app.py  test_commands.py  test_config.py  test_conversation.py  test_generation.py  test_handlers.py  test_registry.py  test_store.py  test_titling.py
