[project]
name = "postak"
version = "0.1.0"
description = "AI chat bot that turns your Telegram channel into a chat list"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{ name = "Naji", email = "teamnaji@gmail.com" }]
keywords = ["telegram", "bot", "ai", "llm", "chatbot", "aiogram", "openai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Typing :: Typed",
]
dependencies = [
    "aiogram>=3.29.1",
    "aiosqlite>=0.22.1",
    "openai>=2.44.0",
    "python-dotenv>=1.2.2",
    "telegramify-markdown>=1.2.0",
]

[project.urls]
Homepage = "https://github.com/hubgram/postak"
Repository = "https://github.com/hubgram/postak"
Issues = "https://github.com/hubgram/postak/issues"

[project.scripts]
postak = "postak.__main__:main"

[tool.hatch.build.targets.sdist]
only-include = ["postak", "tests", "README.md", "LICENSE", ".env.example"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "C4",   # flake8-comprehensions
]

[tool.ruff.lint.isort]
known-first-party = ["postak"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
